blackbird_cpp/blackbirdParser.cpp

// Generated from blackbird.g4 by ANTLR 4.7.1


#include "blackbirdListener.h"

#include "blackbirdParser.h"


using namespace antlrcpp;
using namespace antlr4;

blackbirdParser::blackbirdParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

blackbirdParser::~blackbirdParser() {
  delete _interpreter;
}

std::string blackbirdParser::getGrammarFileName() const {
  return "blackbird.g4";
}

const std::vector<std::string>& blackbirdParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& blackbirdParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- StartContext ------------------------------------------------------------------

blackbirdParser::StartContext::StartContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

blackbirdParser::ProgramContext* blackbirdParser::StartContext::program() {
  return getRuleContext<blackbirdParser::ProgramContext>(0);
}

tree::TerminalNode* blackbirdParser::StartContext::EOF() {
  return getToken(blackbirdParser::EOF, 0);
}

std::vector<tree::TerminalNode *> blackbirdParser::StartContext::NEWLINE() {
  return getTokens(blackbirdParser::NEWLINE);
}

tree::TerminalNode* blackbirdParser::StartContext::NEWLINE(size_t i) {
  return getToken(blackbirdParser::NEWLINE, i);
}

std::vector<blackbirdParser::VariableContext *> blackbirdParser::StartContext::variable() {
  return getRuleContexts<blackbirdParser::VariableContext>();
}

blackbirdParser::VariableContext* blackbirdParser::StartContext::variable(size_t i) {
  return getRuleContext<blackbirdParser::VariableContext>(i);
}


size_t blackbirdParser::StartContext::getRuleIndex() const {
  return blackbirdParser::RuleStart;
}

void blackbirdParser::StartContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<blackbirdListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStart(this);
}

void blackbirdParser::StartContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<blackbirdListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStart(this);
}

blackbirdParser::StartContext* blackbirdParser::start() {
  StartContext *_localctx = _tracker.createInstance<StartContext>(_ctx, getState());
  enterRule(_localctx, 0, blackbirdParser::RuleStart);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(44);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << blackbirdParser::NEWLINE)
      | (1ULL << blackbirdParser::TYPE_ARRAY)
      | (1ULL << blackbirdParser::TYPE_FLOAT)
      | (1ULL << blackbirdParser::TYPE_COMPLEX)
      | (1ULL << blackbirdParser::TYPE_INT)
      | (1ULL << blackbirdParser::TYPE_STR)
      | (1ULL << blackbirdParser::TYPE_BOOL))) != 0)) {
      setState(42);
      _errHandler->sync(this);
      switch (_input->LA(1)) {
        case blackbirdParser::NEWLINE: {
          setState(40);
          match(blackbirdParser::NEWLINE);
          break;
        }

        case blackbirdParser::TYPE_ARRAY:
        case blackbirdParser::TYPE_FLOAT:
        case blackbirdParser::TYPE_COMPLEX:
        case blackbirdParser::TYPE_INT:
        case blackbirdParser::TYPE_STR:
        case blackbirdParser::TYPE_BOOL: {
          setState(41);
          variable();
          break;
        }

      default:
        throw NoViableAltException(this);
      }
      setState(46);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(47);
    program();
    setState(51);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == blackbirdParser::NEWLINE) {
      setState(48);
      match(blackbirdParser::NEWLINE);
      setState(53);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(54);
    match(blackbirdParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VariableContext ------------------------------------------------------------------

blackbirdParser::VariableContext::VariableContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t blackbirdParser::VariableContext::getRuleIndex() const {
  return blackbirdParser::RuleVariable;
}

void blackbirdParser::VariableContext::copyFrom(VariableContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- ExpressionVariableLabelContext ------------------------------------------------------------------

blackbirdParser::VartypeContext* blackbirdParser::ExpressionVariableLabelContext::vartype() {
  return getRuleContext<blackbirdParser::VartypeContext>(0);
}

blackbirdParser::NameContext* blackbirdParser::ExpressionVariableLabelContext::name() {
  return getRuleContext<blackbirdParser::NameContext>(0);
}

tree::TerminalNode* blackbirdParser::ExpressionVariableLabelContext::ASSIGN() {
  return getToken(blackbirdParser::ASSIGN, 0);
}

blackbirdParser::ExpressionContext* blackbirdParser::ExpressionVariableLabelContext::expression() {
  return getRuleContext<blackbirdParser::ExpressionContext>(0);
}

blackbirdParser::NonnumericContext* blackbirdParser::ExpressionVariableLabelContext::nonnumeric() {
  return getRuleContext<blackbirdParser::NonnumericContext>(0);
}

blackbirdParser::ExpressionVariableLabelContext::ExpressionVariableLabelContext(VariableContext *ctx) { copyFrom(ctx); }

void blackbirdParser::ExpressionVariableLabelContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<blackbirdListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterExpressionVariableLabel(this);
}
void blackbirdParser::ExpressionVariableLabelContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<blackbirdListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitExpressionVariableLabel(this);
}
//----------------- ArrayVariableLabelContext ------------------------------------------------------------------

blackbirdParser::VartypeContext* blackbirdParser::ArrayVariableLabelContext::vartype() {
  return getRuleContext<blackbirdParser::VartypeContext>(0);
}

tree::TerminalNode* blackbirdParser::ArrayVariableLabelContext::TYPE_ARRAY() {
  return getToken(blackbirdParser::TYPE_ARRAY, 0);
}

blackbirdParser::NameContext* blackbirdParser::ArrayVariableLabelContext::name() {
  return getRuleContext<blackbirdParser::NameContext>(0);
}

tree::TerminalNode* blackbirdParser::ArrayVariableLabelContext::ASSIGN() {
  return getToken(blackbirdParser::ASSIGN, 0);
}

tree::TerminalNode* blackbirdParser::ArrayVariableLabelContext::NEWLINE() {
  return getToken(blackbirdParser::NEWLINE, 0);
}

blackbirdParser::ArrayvalContext* blackbirdParser::ArrayVariableLabelContext::arrayval() {
  return getRuleContext<blackbirdParser::ArrayvalContext>(0);
}

tree::TerminalNode* blackbirdParser::ArrayVariableLabelContext::LSQBRAC() {
  return getToken(blackbirdParser::LSQBRAC, 0);
}

blackbirdParser::ShapeContext* blackbirdParser::ArrayVariableLabelContext::shape() {
  return getRuleContext<blackbirdParser::ShapeContext>(0);
}

tree::TerminalNode* blackbirdParser::ArrayVariableLabelContext::RSQBRAC() {
  return getToken(blackbirdParser::RSQBRAC, 0);
}

blackbirdParser::ArrayVariableLabelContext::ArrayVariableLabelContext(VariableContext *ctx) { copyFrom(ctx); }

void blackbirdParser::ArrayVariableLabelContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<blackbirdListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterArrayVariableLabel(this);
}
void blackbirdParser::ArrayVariableLabelContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<blackbirdListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitArrayVariableLabel(this);
}
blackbirdParser::VariableContext* blackbirdParser::variable() {
  VariableContext *_localctx = _tracker.createInstance<VariableContext>(_ctx, getState());
  enterRule(_localctx, 2, blackbirdParser::RuleVariable);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(76);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx)) {
    case 1: {
      _localctx = dynamic_cast<VariableContext *>(_tracker.createInstance<blackbirdParser::ExpressionVariableLabelContext>(_localctx));
      enterOuterAlt(_localctx, 1);
      setState(56);
      vartype();
      setState(57);
      name();
      setState(58);
      match(blackbirdParser::ASSIGN);
      setState(61);
      _errHandler->sync(this);
      switch (_input->LA(1)) {
        case blackbirdParser::PLUS:
        case blackbirdParser::MINUS:
        case blackbirdParser::INT:
        case blackbirdParser::FLOAT:
        case blackbirdParser::COMPLEX:
        case blackbirdParser::PI:
        case blackbirdParser::SQRT:
        case blackbirdParser::SIN:
        case blackbirdParser::COS:
        case blackbirdParser::EXP:
        case blackbirdParser::LBRAC:
        case blackbirdParser::NAME: {
          setState(59);
          expression(0);
          break;
        }

        case blackbirdParser::STR:
        case blackbirdParser::BOOL: {
          setState(60);
          nonnumeric();
          break;
        }

      default:
        throw NoViableAltException(this);
      }
      break;
    }

    case 2: {
      _localctx = dynamic_cast<VariableContext *>(_tracker.createInstance<blackbirdParser::ArrayVariableLabelContext>(_localctx));
      enterOuterAlt(_localctx, 2);
      setState(63);
      vartype();
      setState(64);
      match(blackbirdParser::TYPE_ARRAY);
      setState(65);
      name();
      setState(70);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == blackbirdParser::LSQBRAC) {
        setState(66);
        match(blackbirdParser::LSQBRAC);
        setState(67);
        shape();
        setState(68);
        match(blackbirdParser::RSQBRAC);
      }
      setState(72);
      match(blackbirdParser::ASSIGN);
      setState(73);
      match(blackbirdParser::NEWLINE);
      setState(74);
      arrayval();
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- NameContext ------------------------------------------------------------------

blackbirdParser::NameContext::NameContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* blackbirdParser::NameContext::NAME() {
  return getToken(blackbirdParser::NAME, 0);
}


size_t blackbirdParser::NameContext::getRuleIndex() const {
  return blackbirdParser::RuleName;
}

void blackbirdParser::NameContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<blackbirdListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterName(this);
}

void blackbirdParser::NameContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<blackbirdListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitName(this);
}

blackbirdParser::NameContext* blackbirdParser::name() {
  NameContext *_localctx = _tracker.createInstance<NameContext>(_ctx, getState());
  enterRule(_localctx, 4, blackbirdParser::RuleName);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(78);
    match(blackbirdParser::NAME);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VartypeContext ------------------------------------------------------------------

blackbirdParser::VartypeContext::VartypeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* blackbirdParser::VartypeContext::TYPE_ARRAY() {
  return getToken(blackbirdParser::TYPE_ARRAY, 0);
}

tree::TerminalNode* blackbirdParser::VartypeContext::TYPE_FLOAT() {
  return getToken(blackbirdParser::TYPE_FLOAT, 0);
}

tree::TerminalNode* blackbirdParser::VartypeContext::TYPE_COMPLEX() {
  return getToken(blackbirdParser::TYPE_COMPLEX, 0);
}

tree::TerminalNode* blackbirdParser::VartypeContext::TYPE_INT() {
  return getToken(blackbirdParser::TYPE_INT, 0);
}

tree::TerminalNode* blackbirdParser::VartypeContext::TYPE_STR() {
  return getToken(blackbirdParser::TYPE_STR, 0);
}

tree::TerminalNode* blackbirdParser::VartypeContext::TYPE_BOOL() {
  return getToken(blackbirdParser::TYPE_BOOL, 0);
}


size_t blackbirdParser::VartypeContext::getRuleIndex() const {
  return blackbirdParser::RuleVartype;
}

void blackbirdParser::VartypeContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<blackbirdListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterVartype(this);
}

void blackbirdParser::VartypeContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<blackbirdListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitVartype(this);
}

blackbirdParser::VartypeContext* blackbirdParser::vartype() {
  VartypeContext *_localctx = _tracker.createInstance<VartypeContext>(_ctx, getState());
  enterRule(_localctx, 6, blackbirdParser::RuleVartype);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(80);
    _la = _input->LA(1);
    if (!((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << blackbirdParser::TYPE_ARRAY)
      | (1ULL << blackbirdParser::TYPE_FLOAT)
      | (1ULL << blackbirdParser::TYPE_COMPLEX)
      | (1ULL << blackbirdParser::TYPE_INT)
      | (1ULL << blackbirdParser::TYPE_STR)
      | (1ULL << blackbirdParser::TYPE_BOOL))) != 0))) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- NonnumericContext ------------------------------------------------------------------

blackbirdParser::NonnumericContext::NonnumericContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* blackbirdParser::NonnumericContext::STR() {
  return getToken(blackbirdParser::STR, 0);
}

tree::TerminalNode* blackbirdParser::NonnumericContext::BOOL() {
  return getToken(blackbirdParser::BOOL, 0);
}


size_t blackbirdParser::NonnumericContext::getRuleIndex() const {
  return blackbirdParser::RuleNonnumeric;
}

void blackbirdParser::NonnumericContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<blackbirdListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterNonnumeric(this);
}

void blackbirdParser::NonnumericContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<blackbirdListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitNonnumeric(this);
}

blackbirdParser::NonnumericContext* blackbirdParser::nonnumeric() {
  NonnumericContext *_localctx = _tracker.createInstance<NonnumericContext>(_ctx, getState());
  enterRule(_localctx, 8, blackbirdParser::RuleNonnumeric);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(82);
    _la = _input->LA(1);
    if (!(_la == blackbirdParser::STR

    || _la == blackbirdParser::BOOL)) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ShapeContext ------------------------------------------------------------------

blackbirdParser::ShapeContext::ShapeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> blackbirdParser::ShapeContext::INT() {
  return getTokens(blackbirdParser::INT);
}

tree::TerminalNode* blackbirdParser::ShapeContext::INT(size_t i) {
  return getToken(blackbirdParser::INT, i);
}

std::vector<tree::TerminalNode *> blackbirdParser::ShapeContext::COMMA() {
  return getTokens(blackbirdParser::COMMA);
}

tree::TerminalNode* blackbirdParser::ShapeContext::COMMA(size_t i) {
  return getToken(blackbirdParser::COMMA, i);
}


size_t blackbirdParser::ShapeContext::getRuleIndex() const {
  return blackbirdParser::RuleShape;
}

void blackbirdParser::ShapeContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<blackbirdListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterShape(this);
}

void blackbirdParser::ShapeContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<blackbirdListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitShape(this);
}

blackbirdParser::ShapeContext* blackbirdParser::shape() {
  ShapeContext *_localctx = _tracker.createInstance<ShapeContext>(_ctx, getState());
  enterRule(_localctx, 10, blackbirdParser::RuleShape);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(84);
    match(blackbirdParser::INT);
    setState(89);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == blackbirdParser::COMMA) {
      setState(85);
      match(blackbirdParser::COMMA);
      setState(86);
      match(blackbirdParser::INT);
      setState(91);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ArrayvalContext ------------------------------------------------------------------

blackbirdParser::ArrayvalContext::ArrayvalContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> blackbirdParser::ArrayvalContext::TAB() {
  return getTokens(blackbirdParser::TAB);
}

tree::TerminalNode* blackbirdParser::ArrayvalContext::TAB(size_t i) {
  return getToken(blackbirdParser::TAB, i);
}

std::vector<tree::TerminalNode *> blackbirdParser::ArrayvalContext::NEWLINE() {
  return getTokens(blackbirdParser::NEWLINE);
}

tree::TerminalNode* blackbirdParser::ArrayvalContext::NEWLINE(size_t i) {
  return getToken(blackbirdParser::NEWLINE, i);
}

std::vector<blackbirdParser::ArrayrowContext *> blackbirdParser::ArrayvalContext::arrayrow() {
  return getRuleContexts<blackbirdParser::ArrayrowContext>();
}

blackbirdParser::ArrayrowContext* blackbirdParser::ArrayvalContext::arrayrow(size_t i) {
  return getRuleContext<blackbirdParser::ArrayrowContext>(i);
}


size_t blackbirdParser::ArrayvalContext::getRuleIndex() const {
  return blackbirdParser::RuleArrayval;
}

void blackbirdParser::ArrayvalContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<blackbirdListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterArrayval(this);
}

void blackbirdParser::ArrayvalContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<blackbirdListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitArrayval(this);
}

blackbirdParser::ArrayvalContext* blackbirdParser::arrayval() {
  ArrayvalContext *_localctx = _tracker.createInstance<ArrayvalContext>(_ctx, getState());
  enterRule(_localctx, 12, blackbirdParser::RuleArrayval);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(98);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == blackbirdParser::TAB) {
      setState(92);
      match(blackbirdParser::TAB);
      setState(93);
      dynamic_cast<ArrayvalContext *>(_localctx)->arrayrowContext = arrayrow();
      dynamic_cast<ArrayvalContext *>(_localctx)->row.push_back(dynamic_cast<ArrayvalContext *>(_localctx)->arrayrowContext);
      setState(94);
      match(blackbirdParser::NEWLINE);
      setState(100);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ArrayrowContext ------------------------------------------------------------------

blackbirdParser::ArrayrowContext::ArrayrowContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<blackbirdParser::ExpressionContext *> blackbirdParser::ArrayrowContext::expression() {
  return getRuleContexts<blackbirdParser::ExpressionContext>();
}

blackbirdParser::ExpressionContext* blackbirdParser::ArrayrowContext::expression(size_t i) {
  return getRuleContext<blackbirdParser::ExpressionContext>(i);
}

std::vector<tree::TerminalNode *> blackbirdParser::ArrayrowContext::COMMA() {
  return getTokens(blackbirdParser::COMMA);
}

tree::TerminalNode* blackbirdParser::ArrayrowContext::COMMA(size_t i) {
  return getToken(blackbirdParser::COMMA, i);
}


size_t blackbirdParser::ArrayrowContext::getRuleIndex() const {
  return blackbirdParser::RuleArrayrow;
}

void blackbirdParser::ArrayrowContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<blackbirdListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterArrayrow(this);
}

void blackbirdParser::ArrayrowContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<blackbirdListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitArrayrow(this);
}

blackbirdParser::ArrayrowContext* blackbirdParser::arrayrow() {
  ArrayrowContext *_localctx = _tracker.createInstance<ArrayrowContext>(_ctx, getState());
  enterRule(_localctx, 14, blackbirdParser::RuleArrayrow);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(101);
    expression(0);
    setState(106);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == blackbirdParser::COMMA) {
      setState(102);
      match(blackbirdParser::COMMA);
      setState(103);
      expression(0);
      setState(108);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ProgramContext ------------------------------------------------------------------

blackbirdParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* blackbirdParser::ProgramContext::WITH() {
  return getToken(blackbirdParser::WITH, 0);
}

blackbirdParser::DeviceContext* blackbirdParser::ProgramContext::device() {
  return getRuleContext<blackbirdParser::DeviceContext>(0);
}

tree::TerminalNode* blackbirdParser::ProgramContext::COLON() {
  return getToken(blackbirdParser::COLON, 0);
}

std::vector<tree::TerminalNode *> blackbirdParser::ProgramContext::NEWLINE() {
  return getTokens(blackbirdParser::NEWLINE);
}

tree::TerminalNode* blackbirdParser::ProgramContext::NEWLINE(size_t i) {
  return getToken(blackbirdParser::NEWLINE, i);
}

blackbirdParser::ArgumentsContext* blackbirdParser::ProgramContext::arguments() {
  return getRuleContext<blackbirdParser::ArgumentsContext>(0);
}

std::vector<blackbirdParser::StatementContext *> blackbirdParser::ProgramContext::statement() {
  return getRuleContexts<blackbirdParser::StatementContext>();
}

blackbirdParser::StatementContext* blackbirdParser::ProgramContext::statement(size_t i) {
  return getRuleContext<blackbirdParser::StatementContext>(i);
}

std::vector<tree::TerminalNode *> blackbirdParser::ProgramContext::TAB() {
  return getTokens(blackbirdParser::TAB);
}

tree::TerminalNode* blackbirdParser::ProgramContext::TAB(size_t i) {
  return getToken(blackbirdParser::TAB, i);
}


size_t blackbirdParser::ProgramContext::getRuleIndex() const {
  return blackbirdParser::RuleProgram;
}

void blackbirdParser::ProgramContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<blackbirdListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterProgram(this);
}

void blackbirdParser::ProgramContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<blackbirdListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitProgram(this);
}

blackbirdParser::ProgramContext* blackbirdParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 16, blackbirdParser::RuleProgram);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(109);
    match(blackbirdParser::WITH);
    setState(110);
    device();
    setState(112);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == blackbirdParser::LBRAC) {
      setState(111);
      arguments();
    }
    setState(114);
    match(blackbirdParser::COLON);
    setState(115);
    match(blackbirdParser::NEWLINE);
    setState(122);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 11, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(120);
        _errHandler->sync(this);
        switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 10, _ctx)) {
        case 1: {
          setState(116);
          statement();
          break;
        }

        case 2: {
          setState(117);
          match(blackbirdParser::NEWLINE);
          break;
        }

        case 3: {
          setState(118);
          match(blackbirdParser::TAB);
          setState(119);
          match(blackbirdParser::NEWLINE);
          break;
        }

        } 
      }
      setState(124);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 11, _ctx);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DeviceContext ------------------------------------------------------------------

blackbirdParser::DeviceContext::DeviceContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* blackbirdParser::DeviceContext::NAME() {
  return getToken(blackbirdParser::NAME, 0);
}

tree::TerminalNode* blackbirdParser::DeviceContext::DEVICE() {
  return getToken(blackbirdParser::DEVICE, 0);
}


size_t blackbirdParser::DeviceContext::getRuleIndex() const {
  return blackbirdParser::RuleDevice;
}

void blackbirdParser::DeviceContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<blackbirdListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDevice(this);
}

void blackbirdParser::DeviceContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<blackbirdListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDevice(this);
}
